--- a/main.html
+++ b/main.html
@@ -19,37 +19,40 @@
                     <div class="line line-2"></div>
                     <div class="line line-3"></div>
                 </div>
-                <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/3164662/kids-clipart-md.png"
-                    width="180" height="400" alt="cute fox" id="nav-image">
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Animals</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Mythical Creatures</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Numbers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Colors</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Food</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Emotions</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Places</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Flowers</a>
-                    </li>
-                </ul>
+                <div class="image-and-categories">
+                    <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/3164662/kids-clipart-md.png"
+                        width="180" height="400" alt="cute fox" id="nav-image">
+                    <ul class="nav-list">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Animals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Clothes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Feelings and Moods</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Colors</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Food</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Numbers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Appearance</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Feelings</a>
+                        </li>
+                    </ul>
+                </div>
+
 
             </nav>
         </div>
