--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>English For Kids</title>
     <link href="main.css" rel="stylesheet">
+    <link href="main-media.css" rel="stylesheet">
 </head>
 
 <body>
@@ -51,8 +52,6 @@
                     </li>
                 </ul>
             </div>
-
-
         </nav>
 
         <!--toggle button-->
@@ -67,6 +66,21 @@
         </div>
     </header>
     <section class="grid-container">
+        <div class="grid-heading">
+            <img src="mice.png" alt="mice">
+            <h1>English For Kids</h1>
+            <img src="children.png" alt="children" id="girl-image" width="200" height="120">
+        </div>
+        <div class="grid">
+            <div class="grid-item grid-item-1"></div>
+            <div class="grid-item grid-item-2"></div>
+            <div class="grid-item grid-item-3"></div>
+            <div class="grid-item grid-item-4"></div>
+            <div class="grid-item grid-item-5"></div>
+            <div class="grid-item grid-item-6"></div>
+            <div class="grid-item grid-item-7"></div>
+            <div class="grid-item grid-item-8"></div>
+        </div>
     </section>
     <footer>
 
