--- a/main.html
+++ b/main.html
@@ -45,10 +45,13 @@
                         <a href="#" class="nav-link">Numbers</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Appearance</a>
+                        <a href="#" class="nav-link">Actions</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Feelings</a>
+                        <a href="#" class="nav-link">Body</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Statistics</a>
                     </li>
                 </ul>
             </div>
@@ -72,14 +75,46 @@
             <img src="children.png" alt="children" id="girl-image" width="200" height="120">
         </div>
         <div class="grid">
-            <div class="grid-item grid-item-1"></div>
-            <div class="grid-item grid-item-2"></div>
-            <div class="grid-item grid-item-3"></div>
-            <div class="grid-item grid-item-4"></div>
-            <div class="grid-item grid-item-5"></div>
-            <div class="grid-item grid-item-6"></div>
-            <div class="grid-item grid-item-7"></div>
-            <div class="grid-item grid-item-8"></div>
+            <div class="grid-item grid-item-1">
+                <div class="card-image-container"><img class="card-image-1" src="animals.png" width="250" height="250">
+                </div>
+                <p class="card">Animals</p>
+            </div>
+            <div class="grid-item grid-item-2">
+                <div class="card-image-container"><img class="card-image-2" src="clothes.png" width="250" height="250">
+                </div>
+                <p class="card">Clothes</p>
+            </div>
+            <div class="grid-item grid-item-3">
+                <div class="card-image-container"><img class="card-image-3" src="feelings.png" width="250" height="250">
+                </div>
+                <p class="card">Feelings</p>
+            </div>
+            <div class="grid-item grid-item-4">
+                <div class="card-image-container"><img class="card-image-4" src="colors.png" width="250" height="250">
+                </div>
+                <p class="card">Colors</p>
+            </div>
+            <div class="grid-item grid-item-5">
+                <div class="card-image-container"><img class="card-image-5" src="food.png" width="250" height="250">
+                </div>
+                <p class="card">Food</p>
+            </div>
+            <div class="grid-item grid-item-6">
+                <div class="card-image-container"><img class="card-image-6" src="numbers.png" width="250" height="250">
+                </div>
+                <p class="card">Numbers</p>
+            </div>
+            <div class="grid-item grid-item-7">
+                <div class="card-image-container"><img class="card-image-7" src="actions.png" width="250" height="250">
+                </div>
+                <p class="card">Actions</p>
+            </div>
+            <div class="grid-item grid-item-8">
+                <div class="card-image-container"><img class="card-image-8" src="body.png" width="250" height="250">
+                </div>
+                <p class="card">Body</p>
+            </div>
         </div>
     </section>
     <footer>
