--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
                         <a href="#" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Animals</a>
+                        <a href="#" class="nav-link" id="animals">Animals</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Clothes</a>
@@ -75,10 +75,10 @@
             <img src="children.png" alt="children" id="girl-image" width="200" height="120">
         </div>
         <div class="grid">
-            <div class="grid-item grid-item-1">
-                <div class="card-image-container"><img class="card-image-1" src="animals.png" width="250" height="250">
+            <div class="grid-item grid-item-1" id="grid-item-1">
+                <div class="card-image-container"><img id="card-image-1" src="animals.png" width="250" height="250">
                 </div>
-                <p class="card">Animals</p>
+                <p class="card" id="grid-text-1">Animals</p>
             </div>
             <div class="grid-item grid-item-2">
                 <div class="card-image-container"><img class="card-image-2" src="clothes.png" width="250" height="250">
@@ -120,7 +120,7 @@
     <footer>
 
     </footer>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
