--- a/main.html
+++ b/main.html
@@ -24,34 +24,34 @@
                     width="180" height="400" alt="cute fox" id="nav-image">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
+                        <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link" id="animals">Animals</a>
+                        <a href="#animals" class="nav-link" id="animals">Animals</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Clothes</a>
+                        <a href="#clothes" class="nav-link">Clothes</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Feelings and Moods</a>
+                        <a href="#feelings" class="nav-link">Feelings and Moods</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Colors</a>
+                        <a href="#colors" class="nav-link">Colors</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Food</a>
+                        <a href="#food" class="nav-link">Food</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Numbers</a>
+                        <a href="#numbers" class="nav-link">Numbers</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Actions</a>
+                        <a href="#actions" class="nav-link">Actions</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Body</a>
+                        <a href="#body" class="nav-link">Body</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Statistics</a>
+                        <a href="#statistics" class="nav-link">Statistics</a>
                     </li>
                 </ul>
             </div>
@@ -74,7 +74,7 @@
             <h1>English For Kids</h1>
             <img src="children.png" alt="children" id="girl-image" width="200" height="120">
         </div>
-        <div class="grid">
+        <div class="grid none">
             <div class="grid-item grid-item-1" id="grid-item-1">
                 <div class="card-image-container"><img id="card-image-1" src="animals.png" width="250" height="250">
                 </div>
@@ -114,6 +114,128 @@
                 <div class="card-image-container"><img class="card-image-8" src="body.png" width="250" height="250">
                 </div>
                 <p class="card">Body</p>
+            </div>
+        </div>
+        <div class="grid" id="category-grid">
+            <!--grid item-->
+            <div class="grid-item flip-card" id="ragaca">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="card-image-container">
+                            <img class="first-image">
+                        </div>
+                        <p class="card" id="first-text"></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img class="first-image">
+                        <p class="card" id="first-translation"></p>
+                    </div>
+                </div>
+            </div>
+            <!--grid item-->
+            <div class="grid-item flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="card-image-container">
+                            <img class="second-image">
+                        </div>
+                        <p class="card" id="second-text"></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img class="second-image">
+                        <p class="card" id="second-translation"></p>
+                    </div>
+                </div>
+            </div>
+            <!--grid item-->
+            <div class="grid-item flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="card-image-container">
+                            <img class="third-image">
+                        </div>
+                        <p class="card" id="third-text"></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img class="third-image">
+                        <p class="card" id="third-translation"></p>
+                    </div>
+                </div>
+            </div>
+            <!--grid item-->
+            <div class="grid-item flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="card-image-container">
+                            <img class="fourth-image">
+                        </div>
+                        <p class="card" id="fourth-text"></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img class="fourth-image">
+                        <p class="card" id="fourth-translation"></p>
+                    </div>
+                </div>
+            </div>
+            <!--grid item-->
+            <div class="grid-item flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="card-image-container">
+                            <img class="fifth-image">
+                        </div>
+                        <p class="card" id="fifth-text"></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img class="fifth-image">
+                        <p class="card" id="fifth-translation"></p>
+                    </div>
+                </div>
+            </div>
+            <!--grid item-->
+            <div class="grid-item flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="card-image-container">
+                            <img class="sixth-image">
+                        </div>
+                        <p class="card" id="sixth-text"></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img class="sixth-image">
+                        <p class="card" id="sixth-translation"></p>
+                    </div>
+                </div>
+            </div>
+            <!--grid item-->
+            <div class="grid-item flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="card-image-container">
+                            <img class="seventh-image">
+                        </div>
+                        <p class="card" id="seventh-text"></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img class="seventh-image">
+                        <p class="card" id="seventh-translation"></p>
+                    </div>
+                </div>
+            </div>
+            <!--grid item-->
+            <div class="grid-item flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="card-image-container">
+                            <img class="eighth-image">
+                        </div>
+                        <p class="card" id="eighth-text"></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img class="eighth-image">
+                        <p class="card" id="eighth-translation"></p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
