--- a/main.html
+++ b/main.html
@@ -124,26 +124,11 @@
                         <div class="card-image-container">
                             <img class="first-image">
                         </div>
-                        <p class="card" id="first-text"></p>
-                    </div>
-                    <div class="flip-card-back">
-                        <img class="first-image">
-                        <p class="card" id="first-translation"></p>
-                    </div>
-                </div>
-            </div>
-            <!--grid item-->
-            <div class="grid-item flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <div class="card-image-container">
-                            <img class="second-image">
-                        </div>
-                        <p class="card" id="second-text"></p>
+                        <p class="card text"></p>
                     </div>
                     <div class="flip-card-back">
                         <img class="second-image">
-                        <p class="card" id="second-translation"></p>
+                        <p class="card translation"></p>
                     </div>
                 </div>
             </div>
@@ -152,13 +137,13 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-image-container">
-                            <img class="third-image">
+                            <img class="first-image">
                         </div>
-                        <p class="card" id="third-text"></p>
+                        <p class="card text"></p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="third-image">
-                        <p class="card" id="third-translation"></p>
+                        <img class="second-image">
+                        <p class="card translation"></p>
                     </div>
                 </div>
             </div>
@@ -167,13 +152,13 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-image-container">
-                            <img class="fourth-image">
+                            <img class="first-image">
                         </div>
-                        <p class="card" id="fourth-text"></p>
+                        <p class="card text"></p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="fourth-image">
-                        <p class="card" id="fourth-translation"></p>
+                        <img class="second-image">
+                        <p class="card translation"></p>
                     </div>
                 </div>
             </div>
@@ -182,13 +167,13 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-image-container">
-                            <img class="fifth-image">
+                            <img class="first-image">
                         </div>
-                        <p class="card" id="fifth-text"></p>
+                        <p class="card text"></p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="fifth-image">
-                        <p class="card" id="fifth-translation"></p>
+                        <img class="second-image">
+                        <p class="card translation"></p>
                     </div>
                 </div>
             </div>
@@ -197,13 +182,13 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-image-container">
-                            <img class="sixth-image">
+                            <img class="first-image">
                         </div>
-                        <p class="card" id="sixth-text"></p>
+                        <p class="card text"></p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="sixth-image">
-                        <p class="card" id="sixth-translation"></p>
+                        <img class="second-image">
+                        <p class="card translation"></p>
                     </div>
                 </div>
             </div>
@@ -212,13 +197,13 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-image-container">
-                            <img class="seventh-image">
+                            <img class="first-image">
                         </div>
-                        <p class="card" id="seventh-text"></p>
+                        <p class="card text"></p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="seventh-image">
-                        <p class="card" id="seventh-translation"></p>
+                        <img class="second-image">
+                        <p class="card translation"></p>
                     </div>
                 </div>
             </div>
@@ -227,13 +212,28 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="card-image-container">
-                            <img class="eighth-image">
+                            <img class="first-image">
                         </div>
-                        <p class="card" id="eighth-text"></p>
+                        <p class="card text"></p>
                     </div>
                     <div class="flip-card-back">
-                        <img class="eighth-image">
-                        <p class="card" id="eighth-translation"></p>
+                        <img class="second-image">
+                        <p class="card translation"></p>
+                    </div>
+                </div>
+            </div>
+            <!--grid item-->
+            <div class="grid-item flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <div class="card-image-container">
+                            <img class="first-image">
+                        </div>
+                        <p class="card text"></p>
+                    </div>
+                    <div class="flip-card-back">
+                        <img class="second-image">
+                        <p class="card translation"></p>
                     </div>
                 </div>
             </div>
