--- a/main.html
+++ b/main.html
@@ -67,6 +67,9 @@
                 TRAIN
             </div>
         </div>
+        <div>
+            <button class="start-button hide"><img src="start.png" alt="start"></button>
+        </div>
     </header>
     <section class="grid-container">
         <div class="grid-heading">
